--- a/index.html
+++ b/index.html
@@ -1,43 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Privacy Policy</title>
   <style>
     body {
+      margin: 0;
       font-family: system-ui, sans-serif;
-      max-width: 800px;
-      margin: 40px auto;
-      padding: 0 20px;
-      line-height: 1.6;
+      background-color: white;
       color: #333;
     }
-    h1 {
-      color: #2c3e50;
-      text-align: center;
+
+    /* Header */
+    .header {
+      height: 200px;
+      background-color: #3f3f3f;
+      position: relative;
     }
-    footer {
+
+    .gold-strip {
+      height: 40px;
+      background-color: #d4af37;
+      position: absolute;
+      bottom: 1px;
+      left: 0;
+      right: 0;
+    }
+
+    .header-border {
+      height: 1px;
+      background-color: #ccc;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+    }
+
+    /* Body */
+    .content {
+      max-width: 600px;
+      margin-left: 40px;
       margin-top: 40px;
-      text-align: center;
-      font-size: 0.9em;
-      color: #888;
+    }
+
+    h1 {
+      font-size: 36px;
+      margin-bottom: 10px;
+    }
+
+    .separator {
+      height: 2px;
+      background-color: #ccc;
+      margin: 10px 0 20px 0;
+      width: 100%;
+    }
+
+    p {
+      font-size: 16px;
+      line-height: 1.6;
     }
   </style>
 </head>
 <body>
-  <h1>Privacy Policy</h1>
 
-  <p>This game does not collect, use, or share any personal information from its users.</p>
+  <div class="header">
+    <div class="gold-strip"></div>
+    <div class="header-border"></div>
+  </div>
 
-  <p>No data is stored, tracked, or transmitted by this application to any third parties.</p>
+  <div class="content">
+    <h1>Privacy Policy</h1>
+    <div class="separator"></div>
 
-  <p>We are committed to protecting your privacy and ensuring a safe experience while using our game.</p>
+    <p>This game does not collect, store, or share any personal data.</p>
+    <p>No user information is tracked or sent to any external servers.</p>
+    <p>We are committed to maintaining your privacy. If you have questions, please contact us at: <a href="mailto:your-email@example.com">your-email@example.com</a>.</p>
+    <p><small>Last updated: May 5, 2025</small></p>
+  </div>
 
-  <p>If you have any questions or concerns, please contact us at: <a href="mailto:your-email@example.com">your-email@example.com</a>.</p>
-
-  <footer>
-    Last updated: May 5, 2025
-  </footer>
 </body>
 </html>
