Set image to page

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
   <div class="header">
     <!-- Replace the src with your actual image path -->
-    <img src="your-logo.png" alt="Logo" class="header-image" />
+    <img src="images/Whackadoo_upload_image.png" alt="Logo" class="header-image" />
     <div class="header-title">Game Title</div>
 
     <div class="gold-strip"></div>
