--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Privacy Policy</title>
+  <title>Whackadoo Privacy Policy</title>
   <style>
     body {
       margin: 0;
@@ -24,6 +24,99 @@
 
     .header-image {
       height: 120px; /* 60% of 200px */
+      width: auto;
+      margin-right: 20px;
+    }
+
+    .header- {
+      color: white;
+      font-size: 36px;
+      font-weight: bold;
+    }
+
+    .gold-strip {
+      height: 40px;
+      background-color: #d4af37;
+      position: absolute;
+      bottom: 1px;
+      left: 0;
+      right: 0;
+    }
+
+    .header-border {
+      height: 1px;
+      background-color: #ccc;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+    }
+
+    /* Body */
+    .content {
+      max-width: 1800px;
+      margin-left: 40px;
+      margin-top: 40px;
+    }
+
+    h1 {
+      font-size: 36px;
+      margin-bottom: 10px;
+    }
+
+    .separator {
+      height: 2px;
+      background-color: #ccc;
+      margin: 10px 0 20px 0;
+      width: 100%;
+    }
+
+    p {
+      font-size: 16px;
+      line-height: 1.6;
+    }
+  </style>
+</head>
+<body>
+
+  <div class="header">
+    <!-- Replace the src with your actual image path -->
+    <img src="images/Whackadoo_upload_image.png" alt="Logo" class="header-image" />
+    <div class="header-title">Whackadoo!</div>
+
+    <div class="gold-strip"></div>
+    <div class="header-border"></div>
+  </div>
+
+  <div class="content">
+    <h1>Privacy Policy</h1>
+    <div class="separator"></div>
+
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Privacy Policy - Whackadoo!</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: system-ui, sans-serif;
+      background-color: white;
+      color: #333;
+    }
+
+    .header {
+      height: 200px;
+      background-color: #3f3f3f;
+      position: relative;
+      display: flex;
+      align-items: center;
+      padding: 0 40px;
+    }
+
+    .header-image {
+      height: 120px;
       width: auto;
       margin-right: 20px;
     }
@@ -52,11 +145,15 @@
       right: 0;
     }
 
-    /* Body */
     .content {
-      max-width: 600px;
+      max-width: 800px;
       margin-left: 40px;
       margin-top: 40px;
+      margin-bottom: 60px;
+    }
+
+    h1, h2 {
+      font-weight: bold;
     }
 
     h1 {
@@ -67,22 +164,35 @@
     .separator {
       height: 2px;
       background-color: #ccc;
-      margin: 10px 0 20px 0;
+      margin: 10px 0 30px 0;
       width: 100%;
+    }
+
+    h2 {
+      margin-top: 30px;
+      font-size: 22px;
     }
 
     p {
       font-size: 16px;
       line-height: 1.6;
     }
+
+    a {
+      color: #1a0dab;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
 
   <div class="header">
-    <!-- Replace the src with your actual image path -->
-    <img src="images/Whackadoo_upload_image.png" alt="Logo" class="header-image" />
-    <div class="header-title">Game Title</div>
+    <img src="logo.png" alt="Logo" class="header-image" />
+    <div class="header-title">Whackadoo! Privacy Policy</div>
 
     <div class="gold-strip"></div>
     <div class="header-border"></div>
@@ -92,10 +202,48 @@
     <h1>Privacy Policy</h1>
     <div class="separator"></div>
 
-    <p>This game does not collect, store, or share any personal data.</p>
-    <p>No user information is tracked or sent to any external servers.</p>
-    <p>We are committed to maintaining your privacy. If you have questions, please contact us at: <a href="mailto:your-email@example.com">your-email@example.com</a>.</p>
-    <p><small>Last updated: May 5, 2025</small></p>
+    <p><strong>Last updated:</strong> May 5, 2025</p>
+
+    <p><strong>ZapTap Games</strong> built the <em>Whackadoo!</em> game as a Free app. This SERVICE is provided by ZapTap Games at no cost and is intended for use as is.</p>
+
+    <p>This Privacy Policy is meant to help users understand what data we collect, why we collect it, and what we do with it. If you choose to use our Service, you agree to the collection and use of information in relation to this policy.</p>
+
+    <h2>1. Data Collection and Use</h2>
+    <p>We <strong>do not collect or store any personal data</strong> from our users. The only information saved is:</p>
+    <ul>
+      <li><strong>Game progress</strong></li>
+      <li><strong>Game settings</strong></li>
+    </ul>
+    <p>This information is <strong>stored locally on the user’s device</strong> and is <strong>not transmitted to any server</strong> or third party by us.</p>
+
+    <h2>2. Third-Party Services (Google AdMob)</h2>
+    <p><em>Whackadoo!</em> displays ads provided by <strong>Google AdMob</strong>, a third-party advertising service. While we do not collect personal data, Google may collect data in accordance with its own privacy policy.</p>
+
+    <p>For users under the age of 13 (or the applicable minimum age in your country), we ensure that <strong>only non-personalized ads</strong> are shown. These ads are based on contextual information, such as the content of the game, and <strong>do not use tracking technologies</strong> to create user profiles.</p>
+
+    <p>We do <strong>not</strong> offer in-app purchases or any "no-ads" option. Ads are not designed to trick users into purchases.</p>
+
+    <p>Read more about Google’s data practices here:  
+      <a href="https://policies.google.com/privacy" target="_blank" rel="noopener noreferrer">Google Privacy Policy</a>
+    </p>
+
+    <h2>3. Children’s Privacy</h2>
+    <p><em>Whackadoo!</em> is designed for children aged 6 to 14. We <strong>do not knowingly collect or request any personal information from children</strong>. If you believe your child has provided us with personal information, please contact us immediately and we will delete it.</p>
+
+    <h2>4. Security</h2>
+    <p>While we do not collect personal information, we value your trust. For the limited local data (progress/settings), we aim to protect it within commercially acceptable means.</p>
+
+    <h2>5. Changes to This Policy</h2>
+    <p>We may update our Privacy Policy from time to time. We recommend reviewing this page periodically for any changes. Changes will be effective immediately after being posted on this page.</p>
+
+    <h2>6. Contact Us</h2>
+    <p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at:  
+    📧 <a href="mailto:contact@zaptap.games">contact@zaptap.games</a></p>
+  </div>
+
+</body>
+</html>
+
   </div>
 
 </body>
