Update index.html content in-app purchase

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
     <p>For users under the age of 13 (or the applicable minimum age in your country), we ensure that <strong>only non-personalized ads</strong> are shown. These ads are based on contextual information, such as the content of the game, and <strong>do not use tracking technologies</strong> to create user profiles.</p>
 
-    <p>We do <strong>not</strong> offer in-app purchases or any "no-ads" option. Ads are not designed to trick users into purchases.</p>
+    <p>We <strong>do offer optional in-app purchases</strong>, including a <strong>"no-ads" experience</strong>. However, these options are presented in a calm and respectful manner, with <strong>no pressure or tricks to encourage purchases</strong>. The game is fully playable without spending any money, and all ads comply with child-appropriate standards.</p>
 
     <p>Read more about Google’s data practices here:  
       <a href="https://policies.google.com/privacy" target="_blank" rel="noopener noreferrer">Google Privacy Policy</a>
